@@ -37,15 +37,20 @@ The repository does not contain generated files.  To create <code>configure</cod
 </ul>
 
 
-Instructions for compiling are in the <a
-href="@DOC@v2.2/Documentation/topdocs/out-www/INSTALL.html">INSTALL</a> instructions.
-<p>
+Instructions for compiling are in the installation instructions.
+(INSTALL <a
+href="@DOC@v2.4/Documentation/topdocs/out-www/INSTALL.html">for
+2.4</a> and <a
+href="@DOC@v2.5/Documentation/topdocs/out-www/INSTALL.html">for 2.5
+INSTALL</a>)
 
+
+<p>
 
 
 <h2>Participating</h2>
 
-Participation is highly encouraged! Go <a href=participating/>here</a>
+Participation is highly encouraged! Go <a href="participating/">here</a>
 for more information.
 
 
